[tool.poetry]
name = "rockstart-data-generator"
version = "0.1.0"
description = "Rockstart data generator"
authors = ["Mario <mariohdpz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^5.0.1"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.5.0"
black = "^20.8b1"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
